--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   },
   "routes":[
     {
-      "src":"/picture(/.*)","dest":"/api/picture/index.php"
+      "src":"/picture(.*)","dest":"/api/picture/index.php"
     }
   ]
 }
