--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   },
   "routes":[
     {
-      "src":"/picture(.*)","dest":"/api/picture/index.php"
+      "src":"/jiexi/douyin(.*)","dest":"/api/jiexi/douyin/index.php"
     }
   ]
 }
