--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,9 @@
   },
   "routes":[
     {
-      "src":"/jiexi/douyin(.*)","dest":"/api/jiexi/douyin/index.php",
+      "src":"/jiexi/douyin(.*)","dest":"/api/jiexi/douyin/index.php"
+    },
+    {
       "src":"/jiexi/kuaishou(.*)","dest":"/api/jiexi/kuaishou/index.php"
     }
   ]
